<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearlayout_filter_bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingTop="@dimen/size1x"
        android:paddingBottom="@dimen/size1x"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <Button
            android:id="@+id/button_filter_bottom_sheet_price_ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size1x"
            android:backgroundTint="@color/white"
            android:text="@string/price_ascending_title"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_filter_bottom_sheet_price_descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size1x"
            android:backgroundTint="@color/white"
            android:text="@string/price_descending_title"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_filter_bottom_sheet_date_ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size1x"
            android:backgroundTint="@color/white"
            android:text="@string/date_ascending_title"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_filter_bottom_sheet_date_descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size1x"
            android:backgroundTint="@color/white"
            android:text="@string/date_descending_title"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_filter_bottom_sheet_filter_outdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size1x"
            android:backgroundTint="@color/white"
            android:text="@string/date_filter_outdated"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
</layout>
